Sprint 24: fix feature ordering bug, honest CV, ML safeguards
Root cause: 53/80 features were in wrong order between trained model
and Java FEATURE_NAMES — every tree split read the wrong feature.
Model predictions were random noise for 13 sprints. In-game R² was
-0.18 (not +0.48 as reported).

Fixes:
- Retrained all 3 models with cross-opponent GroupKFold (not battle_id)
- Re-exported with correct feature ordering
- Honest baselines: fire_power R²=0.94, movement R²=0.74, timing AUC=0.76

Safeguards added at every level:
- Python export: feature order hash verification
- Java runtime: validateFeatureDimension() in all 3 predictors
- Java tests: fixture-based prediction check (100 samples vs Python ref)
- CI Stage 3: feature order + cross-prediction consistency checks
- Sanity checks: B1 threshold 0.3→0.5, new B4 movement R², B5 timing AUC
- compare_features.py: order check + cross-predict with Python model